--- a/Tex/src-SPAA/plotsStyle.tex
+++ b/Tex/src-SPAA/plotsStyle.tex
@@ -49,7 +49,7 @@
        ymin=0,ymax=2800000,
        xtick={2,4,8,16,32}, 
        legend columns=-1,
-	   legend entries={\autoSkiplist, \kary , \skiplist, \stmSkiplist,
+	   legend entries={\autoSkiplist, \kary , \skiplist (not atomic), \stmSkiplist,
 	   \domSkiplist}, legend to name=skiplistLegened,
 }}
 
@@ -59,7 +59,7 @@
        scaled y ticks=base 10:-3,
        xtick={2,4,8,16,32}, 
        legend columns=-1,
-	   legend entries={\autoSkiplist, \kary, \skiplist, \stmSkiplist,
+	   legend entries={\autoSkiplist, \kary, \skiplist (not atomic), \stmSkiplist,
 	   \domSkiplist}, legend to name=skiplistLegened1000,
 }}
 
@@ -68,6 +68,6 @@
        ymin=0,ymax=5500000,
        xtick={1,2,4,8,16,32}, 
        legend columns=-1,
-	   legend entries={\autoSkiplist, \kary , \skiplist, \stmSkiplist,
+	   legend entries={\autoSkiplist, \kary , \skiplist (not atomic), \stmSkiplist,
 	   \domSkiplist}, legend to name=skiplistLegenedUpdate,
 }}
