fix small ranges figure

--- a/Tex/src-SPAA/plots/smallrangeAll.tex
+++ b/Tex/src-SPAA/plots/smallrangeAll.tex
@@ -1,6 +1,23 @@
 \begin{tikzpicture}
+\begin{axis}[mystyle,skiplistUpdate,
+ %ylabel = { million ops/sec},
+  ylabel = { million ops/sec},
+ title={\textbf{write-dominated}},
+ width=0.28\textwidth,]
+\addplot [black,mark=square*] table [x={threads}, y={LockRemovalSkipList}]
+{results/trees-i1000000-u100.log}; 
+\addplot [violet,mark=o] table [x={threads}, y={LockFreeKSTRQ}]
+{results/trees-i1000000-u100.log}; 
+\addplot [teal,mark=pentagon] table [x={threads}, y={LockFreeJavaSkipList}]
+{results/trees-i1000000-u100.log};
+\addplot [magenta,mark=+] table [x={threads}, y={STMSkipList}]
+{results/trees-i1000000-u100.log};
+\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingSkipList}]
+{results/trees-i1000000-u100.log};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
 \begin{axis}[mystyle,skiplist,
- ylabel = { million ops/sec},
  title={\textbf{range-queries}},
  width=0.28\textwidth,]
  ]
@@ -19,7 +36,7 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,skiplist,
 % ylabel = { million ops/sec},
- title={\textbf{Insert and Delete}},
+ title={\textbf{insert and delete}},
  width=0.28\textwidth,]
  ]
 \addplot [black,mark=square*] table [x={threads}, y={LockRemovalSkipList}]
@@ -32,23 +49,6 @@
 {results/update1.txt};
 \addplot [blues4,mark=x] table [x={threads}, y={DominationLockingSkipList}]
 {results/update1.txt};
-\end{axis}
-\end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[mystyle,skiplistUpdate,
- %ylabel = { million ops/sec},
- title={\textbf{write-dominated}},
- width=0.28\textwidth,]
-\addplot [black,mark=square*] table [x={threads}, y={LockRemovalSkipList}]
-{results/trees-i1000000-u100.log}; 
-\addplot [violet,mark=o] table [x={threads}, y={LockFreeKSTRQ}]
-{results/trees-i1000000-u100.log}; 
-\addplot [teal,mark=pentagon] table [x={threads}, y={LockFreeJavaSkipList}]
-{results/trees-i1000000-u100.log};
-\addplot [magenta,mark=+] table [x={threads}, y={STMSkipList}]
-{results/trees-i1000000-u100.log};
-\addplot [blues4,mark=x] table [x={threads}, y={DominationLockingSkipList}]
-{results/trees-i1000000-u100.log};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
