--- a/Tex/src-SPAA/evaluation2.tex
+++ b/Tex/src-SPAA/evaluation2.tex
@@ -261,8 +261,8 @@ or a mix of insert and delete operations.}
 \begin{center}
 \input{plots/smallrangeAll}
 \end{center}
-\caption{Small range: all threads execute either small range queries $[10,20]$
-or a mix of insert and delete operations.}
+\caption{Small range: (on the right) read-only workload all threads execute small range queries $[10,20]$; (on the left) write-dominated workload all threads execute a mix of insert and delete operations; (in the middle) mixed workload half the threads execute small range queries (middle left)
+and half the threads execute insert and delete operations (middle right).}
 \label{evaluation:results:skiplist}
 \end{figure*}
 
